--- a/app/src/main/res/layout/reboot_interface.xml
+++ b/app/src/main/res/layout/reboot_interface.xml
@@ -18,23 +18,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_margin"
-        android:paddingRight="@dimen/activity_margin"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:padding="@dimen/card_view_margin">
 
         <ImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_interface" />
+            app:srcCompat="@drawable/ic_interface"
+            android:layout_marginLeft="@dimen/card_view_margin"
+            android:layout_marginRight="@dimen/card_view_margin"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/activity_margin"
-            android:paddingRight="@dimen/activity_margin">
+            android:paddingLeft="@dimen/card_view_margin"
+            android:paddingRight="@dimen/card_view_margin">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
