--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="activity_margin">64dp</dimen>
+    <dimen name="activity_padding">32dp</dimen>
+    <dimen name="card_view_margin">12dp</dimen>
 </resources>
