--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="activity_margin">16dp</dimen>
+    <dimen name="activity_padding">2dp</dimen>
     <dimen name="card_view_margin">8dp</dimen>
 </resources>
