--- a/app/src/main/res/layout/reboot_bootloader.xml
+++ b/app/src/main/res/layout/reboot_bootloader.xml
@@ -5,13 +5,15 @@
     android:id="@+id/bootloaderReboot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/card_view_margin"
-    android:layout_marginLeft="@dimen/card_view_margin"
-    android:layout_marginRight="@dimen/card_view_margin"
-    card_view:cardUseCompatPadding="true"
+    android:layout_marginTop="@dimen/card_margin_vertical"
+    android:layout_marginBottom="@dimen/card_margin_vertical"
+    android:layout_marginLeft="@dimen/card_margin_horizontal"
+    android:layout_marginRight="@dimen/card_margin_horizontal"
     android:clickable="true"
     android:focusable="true"
     android:onClick="reboot"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
@@ -24,16 +26,16 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_bootloader"
             android:layout_marginLeft="@dimen/card_view_margin"
-            android:layout_marginRight="@dimen/card_view_margin" />
+            android:layout_marginRight="@dimen/card_view_margin"
+            app:srcCompat="@drawable/ic_bootloader"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:paddingLeft="@dimen/card_view_margin"
-            android:paddingRight="@dimen/card_view_margin">
+            android:paddingRight="@dimen/card_view_margin"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,6 +48,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/bootloader_desc"
                 android:textSize="16sp" />
+
         </LinearLayout>
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
