--- a/app/src/main/res/layout/reboot_interface.xml
+++ b/app/src/main/res/layout/reboot_interface.xml
@@ -5,13 +5,15 @@
     android:id="@+id/interfaceReboot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/card_view_margin"
-    android:layout_marginLeft="@dimen/card_view_margin"
-    android:layout_marginRight="@dimen/card_view_margin"
-    card_view:cardUseCompatPadding="true"
+    android:layout_marginTop="@dimen/card_margin_vertical"
+    android:layout_marginBottom="@dimen/card_margin_vertical"
+    android:layout_marginLeft="@dimen/card_margin_horizontal"
+    android:layout_marginRight="@dimen/card_margin_horizontal"
     android:clickable="true"
     android:focusable="true"
     android:onClick="reboot"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
