--- a/app/src/main/res/layout/reboot_normal.xml
+++ b/app/src/main/res/layout/reboot_normal.xml
@@ -5,13 +5,15 @@
     android:id="@+id/normalReboot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/card_view_margin"
-    android:layout_marginLeft="@dimen/card_view_margin"
-    android:layout_marginRight="@dimen/card_view_margin"
-    card_view:cardUseCompatPadding="true"
+    android:layout_marginTop="@dimen/card_margin_vertical"
+    android:layout_marginBottom="@dimen/card_margin_vertical"
+    android:layout_marginLeft="@dimen/card_margin_horizontal"
+    android:layout_marginRight="@dimen/card_margin_horizontal"
     android:clickable="true"
     android:focusable="true"
     android:onClick="reboot"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
@@ -24,9 +26,9 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_restart"
             android:layout_marginLeft="@dimen/card_view_margin"
-            android:layout_marginRight="@dimen/card_view_margin"/>
+            android:layout_marginRight="@dimen/card_view_margin"
+            app:srcCompat="@drawable/ic_restart" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,8 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/reboot"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -47,5 +49,7 @@
                 android:text="@string/reboot_desc"
                 android:textSize="16sp" />
         </LinearLayout>
+
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
