--- a/app/src/main/res/layout/reboot_bootloader.xml
+++ b/app/src/main/res/layout/reboot_bootloader.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bootloaderReboot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/card_margin_vertical"
-    android:layout_marginBottom="@dimen/card_margin_vertical"
     android:layout_marginLeft="@dimen/card_margin_horizontal"
+    android:layout_marginTop="@dimen/card_margin_vertical"
     android:layout_marginRight="@dimen/card_margin_horizontal"
-    android:clickable="true"
-    android:focusable="true"
+    android:layout_marginBottom="@dimen/card_margin_vertical"
     android:onClick="reboot"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="2dp"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
@@ -23,25 +19,26 @@
         android:padding="@dimen/card_view_margin">
 
         <ImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/card_view_margin"
             android:layout_marginRight="@dimen/card_view_margin"
-            app:srcCompat="@drawable/ic_bootloader"/>
+            android:contentDescription="@string/bootloader"
+            app:srcCompat="@drawable/ic_bootloader" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:paddingLeft="@dimen/card_view_margin"
-            android:paddingRight="@dimen/card_view_margin"
-            android:orientation="vertical">
+            android:paddingRight="@dimen/card_view_margin">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/bootloader"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -53,4 +50,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
