--- a/app/src/main/res/layout/reboot_fast.xml
+++ b/app/src/main/res/layout/reboot_fast.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fastReboot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/card_margin_vertical"
-    android:layout_marginBottom="@dimen/card_margin_vertical"
     android:layout_marginLeft="@dimen/card_margin_horizontal"
+    android:layout_marginTop="@dimen/card_margin_vertical"
     android:layout_marginRight="@dimen/card_margin_horizontal"
-    android:clickable="true"
-    android:focusable="true"
+    android:layout_marginBottom="@dimen/card_margin_vertical"
     android:onClick="reboot"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="2dp"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
@@ -23,12 +19,12 @@
         android:padding="@dimen/card_view_margin">
 
         <ImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_fast_reboot"
             android:layout_marginLeft="@dimen/card_view_margin"
-            android:layout_marginRight="@dimen/card_view_margin"/>
+            android:layout_marginRight="@dimen/card_view_margin"
+            android:contentDescription="@string/reboot_fast"
+            app:srcCompat="@drawable/ic_fast_reboot" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,12 +32,13 @@
             android:orientation="vertical"
             android:paddingLeft="@dimen/card_view_margin"
             android:paddingRight="@dimen/card_view_margin">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/reboot_fast"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -51,4 +48,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
